--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -207,6 +207,14 @@
     <Compile Include="Migrations\201708170619558_Initial.Designer.cs">
       <DependentUpon>201708170619558_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708170724051_Rating.cs" />
+    <Compile Include="Migrations\201708170724051_Rating.Designer.cs">
+      <DependentUpon>201708170724051_Rating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708170755244_DataAnnotations.cs" />
+    <Compile Include="Migrations\201708170755244_DataAnnotations.Designer.cs">
+      <DependentUpon>201708170755244_DataAnnotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -649,6 +657,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201708170619558_Initial.resx">
       <DependentUpon>201708170619558_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708170724051_Rating.resx">
+      <DependentUpon>201708170724051_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708170755244_DataAnnotations.resx">
+      <DependentUpon>201708170755244_DataAnnotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
